Add database creation to Homestead.yaml options, closes #16

--- a/Homestead.default.yaml
+++ b/Homestead.default.yaml
@@ -30,6 +30,12 @@ sites:
     - map: homestead.app
       to: /home/vagrant/Code/Laravel/public
 
+databases:
+    - name: homestead
+      type: mysql
+    - name: homestead
+      type: postgresql
+
 variables:
     - key: APP_ENV
       value: local
