--- a/configs/nginx/conf.d/ssl.conf
+++ b/configs/nginx/conf.d/ssl.conf
@@ -12,7 +12,7 @@ ssl_prefer_server_ciphers on;
 ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
 # Disable gzip of dynamic content over SSL/TLS
-gzip off;
+#gzip off;
 
 # Enable sessions cache
 # 1m is equal to about 4000 sessions.
@@ -25,3 +25,9 @@ resolver 8.8.4.4 8.8.8.8 valid=300s;
 # Enable spdy
 spdy_headers_comp 5;
 add_header Alternate-Protocol 443:npn-spdy/3.1;
+
+# Enable Strict Transport Security (HSTS)
+#map $scheme $hsts_header {
+#    https  max-age=31536000;
+#}
+#add_header Strict-Transport-Security $hsts_header;
