Fixed fastcgi_pass in php-fpm ping and status

--- a/configs/nginx/includes/php-fpm.conf
+++ b/configs/nginx/includes/php-fpm.conf
@@ -33,7 +33,7 @@ location ~ ^/(status|ping)$ {
     allow 192.168.1.0/24;
     deny all;
 
-    fastcgi_pass $fcgi_upstream;
+    fastcgi_pass php;
     keepalive_timeout 0;
     expires -1;
 }
