Added web sockets on port 3000 to default CSP header for BrowserSync

--- a/configs/nginx/conf.d/restrictions.conf
+++ b/configs/nginx/conf.d/restrictions.conf
@@ -17,4 +17,4 @@ add_header X-XSS-Protection "1; mode=block";
 # you can tell the browser that it can only download content from the domains you explicitly allow
 # http://www.html5rocks.com/en/tutorials/security/content-security-policy/
 # https://www.owasp.org/index.php/Content_Security_Policy
-add_header Content-Security-Policy "default-src 'self'; script-src 'self' google-analytics.com *.cloudflare.com; img-src 'self' data:; style-src 'self'; font-src 'self' data:; frame-src 'self'; object-src 'self' connect-src 'self' ws://$host wss://$host";
+add_header Content-Security-Policy "default-src 'self'; script-src 'self' google-analytics.com *.cloudflare.com; img-src 'self' data:; style-src 'self'; font-src 'self' data:; frame-src 'self'; object-src 'self' connect-src 'self' ws://$host wss://$host ws://$host:3000 wss://$host:3000";
