Moved global restrictions back to the include and disabled CSP by default

--- a/configs/nginx/includes/restrictions.conf
+++ b/configs/nginx/includes/restrictions.conf
@@ -1,3 +1,25 @@
+## Enable clickjacking protection in modern browsers.
+## https://developer.mozilla.org/en/The_X-FRAME-OPTIONS_response_header
+add_header X-Frame-Options sameorigin;
+
+# When serving user-supplied content, include a X-Content-Type-Options: nosniff header along with the Content-Type
+# to disable content-type sniffing on some browsers.
+# https://www.owasp.org/index.php/List_of_useful_HTTP_headers
+add_header X-Content-Type-Options nosniff;
+
+# This header enables the Cross-site scripting (XSS) filter built into most recent web browsers.
+# It's usually enabled by default anyway, so the role of this header is to re-enable the filter for
+# this particular website if it was disabled by the user.
+# https://www.owasp.org/index.php/List_of_useful_HTTP_headers
+add_header X-XSS-Protection "1; mode=block";
+
+# with Content Security Policy (CSP) enabled(and a browser that supports it (http://caniuse.com/#feat=contentsecuritypolicy),
+# you can tell the browser that it can only download content from the domains you explicitly allow
+# http://www.html5rocks.com/en/tutorials/security/content-security-policy/
+# https://www.owasp.org/index.php/Content_Security_Policy
+#add_header Content-Security-Policy "default-src 'self'; script-src 'self' google-analytics.com *.cloudflare.com; img-src 'self' data:; style-src 'self'; font-src 'self' data:; frame-src 'self'; object-src 'self' connect-src 'self' ws://$host wss://$host ws://$host:3000 wss://$host:3000";
+
+
 ## Protect the readme.html file to not reveal the installed version.
 location = /wordpress/readme.html {
     allow 127.0.0.1;
