--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -39,7 +39,7 @@ http {
 
     # PHP Upstream
     upstream php {
-        server unix:/var/run/php5-fpm.sock;
+        server unix:/var/run/php/php7.0-fpm.sock;
     }
 
     # HHVM Upstream
