--- a/configs/nginx/includes/php-fpm.conf
+++ b/configs/nginx/includes/php-fpm.conf
@@ -9,7 +9,7 @@
 location ~ ^(?<script>.+\.php)(?<path_info>.*)$ {
     fastcgi_index index.php;
 
-    include "fastcgi_params";
+    include "fastcgi.conf";
     fastcgi_param SCRIPT_FILENAME $document_root$script;
     fastcgi_param SCRIPT_NAME $script;
     fastcgi_param PATH_INFO $path_info;
